style:css styles fix

--- a/src/assets/css/util.scss
+++ b/src/assets/css/util.scss
@@ -88,6 +88,14 @@
   margin: 8px;
 }
 
+.mt-sm {
+  margin-top: 8px;
+}
+
+.mt-md {
+  margin-top: 16px;
+}
+
 .my-sm {
   margin-top: 8px;
   margin-bottom: 8px;
@@ -96,4 +104,9 @@
 .mx-sm {
   margin-left: 8px;
   margin-right: 8px;
+}
+
+.my-md {
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
